test/ext/std/vector.cpp
@@ -20,21 +20,21 @@ using namespace boost::hana;
 
 int main() {
     auto eqs = make_tuple(
-          std::vector<test::eq<0>>{}
-        , std::vector<test::eq<0>>{{}}
-        , std::vector<test::eq<0>>{{}, {}}
-        , std::vector<test::eq<0>>{{}, {}, {}}
-        , std::vector<test::eq<0>>{{}, {}, {}, {}}
+          std::vector<test::eq<0>>{0}
+        , std::vector<test::eq<0>>{1}
+        , std::vector<test::eq<0>>{2}
+        , std::vector<test::eq<0>>{3}
+        , std::vector<test::eq<0>>{4}
     );
 
     // auto eq_values = make<Tuple>(test::eq<0>{}, test::eq<2>{});
 
     auto ords = make_tuple(
-          std::vector<test::ord<0>>{}
-        , std::vector<test::ord<0>>{{}}
-        , std::vector<test::ord<0>>{{}, {}}
-        , std::vector<test::ord<0>>{{}, {}, {}}
-        , std::vector<test::ord<0>>{{}, {}, {}, {}}
+          std::vector<test::ord<0>>{0}
+        , std::vector<test::ord<0>>{1}
+        , std::vector<test::ord<0>>{2}
+        , std::vector<test::ord<0>>{3}
+        , std::vector<test::ord<0>>{4}
     );
 
     //////////////////////////////////////////////////////////////////////////
